[gd_scene load_steps=4 format=2]

[ext_resource path="res://TileMap.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game.gd" type="Script" id=2]
[ext_resource path="res://UI.tscn" type="PackedScene" id=3]

[node name="Game" type="Node"]
script = ExtResource( 2 )

[node name="TileMap" parent="." instance=ExtResource( 1 )]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4

[node name="CanvasLayer" parent="." instance=ExtResource( 3 )]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="clear" from="CanvasLayer" to="." method="_on_clear"]
[connection signal="start_pause" from="CanvasLayer" to="." method="_on_start_pause"]
[connection signal="step" from="CanvasLayer" to="." method="_on_step"]
